output from modeldown

--- a/output/prediction_breakdown.html
+++ b/output/prediction_breakdown.html
@@ -89,7 +89,7 @@
         <img src="img/prediction_breakdown_8278_rf.png" />
     </div>
     <div style="padding: 0px 20px;">
-        <h2>Worst Prediction for gbm - observation #2546</h2>
+        <h2>Worst Prediction for gbm - observation #4455</h2>
         <table class="table table-responsive table-bordered table-hover" style="margin-left: auto; margin-right: auto;">
  <thead>
   <tr>
@@ -103,16 +103,16 @@
  </thead>
 <tbody>
   <tr>
-   <td style="text-align:right;"> 3119 </td>
+   <td style="text-align:right;"> 2503 </td>
    <td style="text-align:right;"> 1995 </td>
-   <td style="text-align:right;"> 73 </td>
-   <td style="text-align:right;"> 4 </td>
-   <td style="text-align:right;"> 3 </td>
-   <td style="text-align:left;"> Bielany </td>
+   <td style="text-align:right;"> 150 </td>
+   <td style="text-align:right;"> 1 </td>
+   <td style="text-align:right;"> 6 </td>
+   <td style="text-align:left;"> Ursynow </td>
   </tr>
 </tbody>
 </table>
-        <img src="img/prediction_breakdown_2546_gbm.png" />
+        <img src="img/prediction_breakdown_4455_gbm.png" />
     </div>
 </div>
     </div>
@@ -121,7 +121,7 @@
   <footer>
     <div class="footer">
       <div class="text-center">Site built with <a href="https://github.com/MI2DataLab/modelDown">modelDown</a>.</div>
-      <div class="text-center" style="margin: 0px 0px 5px;">Last updated: 2018-09-22 09:50:50</div>
+      <div class="text-center" style="margin: 0px 0px 5px;">Last updated: 2018-09-24 16:30:51</div>
     </div>
   </footer>
 
